# template-unity-project

./: .coveragerc  .editorconfig  .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
ProjectSettings/: GraphicsSettings.asset  ProjectSettings.asset
